--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-01-components",
+  "name": "goit-react-hw-01",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ertyhd.github.io/goit-react-hw-01-components/",
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prop-types": "^15.8.1"
   }
 }
